# whispers

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  build.sh  dev-setup.sh  docker-compose.yml
.github/workflow/: ci.yml
.github/workflows/: main.yml
backend/: .coverage  .coveragerc  Dockerfile  alembic.ini  config.py  exceptions.py  mailing.py  main.py  pyproject.toml  router.py  schemas.py  security.py  websocket.py
backend/auth/: controller.py  router.py  schemas.py
backend/db/: __init__.py  base_model.py  ensure_seed_data.py  env.py  generic_crud.py  init.py  session.py
backend/db/versions/: 151d99799d68_add_google_token_to_users.py  601f74ad117e_add_chat_secret_to_user.py  b1f0e5f684fa_add_twitch_info_to_user.py  edf2a1a862cc_create_users.py
backend/live/: controller.py  router.py  schemas.py
backend/templates/: password_recovery.html.jinja2  register.html.jinja2
backend/tests/: conftest.py  test_auth.py  test_live.py  test_users.py  utils.py
backend/users/: controller.py  models.py  router.py  schemas.py
docs/: DEVELOPMENT.md  GOOGLE.md
frontend/: .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/public/: index.html
frontend/public/static/: global.css
frontend/src/: App.svelte  constants.ts  utils.ts
frontend/src/components/: Button.svelte  ChatMessages.svelte  Icon.svelte  Input.svelte  PrivateRoute.svelte
frontend/src/layouts/: AuthLayout.svelte  RootLayout.svelte
frontend/src/stores/: api.ts  chat.ts  index.ts  user.ts
frontend/src/types/: components.ts  (+1 more)
psds/: favicon.psd
(+11 files in other folders)
